<resources>
    <string name="app_name">Alan Bojo</string>
    <!--Headers-->
    <string name="header_task_caption">Tasks</string>
    <string name="header_work_caption">Work Spaces</string>
    <string name="header_new_task_header">New Tasks</string>
    <string name="header_habit">Habits</string>

    <!--Text-->
    <string name="text_empty">Empty</string>
    <string name="text_view_steps">See Steps</string>
    <!--Text_Error-->
    <string name="text_error_title_exists">Title already exists</string>
    <string name="text_empty_field">This field can not be empty</string>
    <string name="text_min_goal_goal">Min Goal must be lower than goal</string>

    <!--Hint-->
    <string name="hint_task_description">Task description</string>
    <string name="hint_work_space_title">Title of workspace</string>
    <string name="hint_work_space_subtitle">subtitle (optional)</string>
    <string name="hint_parent">Parent</string>
    <string name="hint_habit_name">Habit name</string>
    <string name="hint_habit_goal">Goal (count)</string>
    <string name="hint_habit_min_goal">Min Goal (count)</string>


    <!--Button-->
    <string name="button_add_work_space">Add work space</string>
    <string name="button_add_task">Add new task</string>
    <string name="button_add_to_list">Add to List</string>
    <string name="button_create_work_space">Create Work Space</string>
    <string name="button_select_color">Select Color</string>
    <string name="button_submit">Submit</string>
    <string name="button_edit">Edit</string>
    <string name="button_add_habit">New Habit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>

    <string name="button_test">Test</string>
</resources>