<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black">

    <androidx.cardview.widget.CardView
        style="@style/BujoDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_header_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/amatic_sc_regular"
                android:text="@string/header_new_task_header"
                android:textColor="@color/alan_default"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/header_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/alan_default"
                app:layout_constraintEnd_toEndOf="@id/task_header_caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_header_caption" />

            <EditText
                android:id="@+id/input_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints="Cap sentence."
                android:fontFamily="@font/amatic_sc_regular"
                android:gravity="start"
                android:hint="@string/hint_task_description"
                android:inputType="textCapSentences"
                android:textColor="@color/gray_67"
                android:textColorHint="@color/gray_AA"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_separator" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_task_button"
                style="@style/BujoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:text="@string/button_add_to_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_task_description" />


            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintBottom_toTopOf="@id/submit_button"
                app:layout_constraintTop_toBottomOf="@id/add_task_button">

                <LinearLayout
                    android:id="@+id/list_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


            </ScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/BujoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/alan_aqua"
                android:padding="12dp"
                android:text="@string/button_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scroll" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>