<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_work_space"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alan_primary">

    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/button_1"
        app:layout_constraintTop_toTopOf="parent"
        android:rotation="45"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Root/root/..." />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amatic_sc_regular"
        android:textColor="@color/white"
        android:textSize="96sp"
        android:textStyle="bold"
        android:shadowColor="@color/gray_67"
        android:shadowRadius="3"
        android:shadowDx="2"
        android:shadowDy="2"
        app:layout_constraintStart_toStartOf="@id/root"
        app:layout_constraintTop_toTopOf="@id/root"
        android:paddingEnd="8dp"
        tools:text="Fiverr" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_regular"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/root"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="trabajos de dibujo" />

    <TextView
        android:id="@+id/tasks_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_regular"
        android:text="@string/header_task_caption"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <View
        android:id="@+id/tasks_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tasks_header" />

    <LinearLayout
        android:id="@+id/tasks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tasks_underline" />

    <TextView
        android:id="@+id/works_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_regular"
        android:text="@string/header_work_caption"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/tasks_list" />

    <View
        android:id="@+id/works_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/works_header" />

    <LinearLayout
        android:id="@+id/works_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/works_underline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/add_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button_decoration_1"
            app:layout_constraintBottom_toBottomOf="@id/add_button"
            app:layout_constraintEnd_toEndOf="@id/add_button"
            app:layout_constraintStart_toStartOf="@id/add_button"
            app:layout_constraintTop_toTopOf="@id/add_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:src="@drawable/button_back_1"
        app:layout_constraintTop_toTopOf="@id/add_button_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        />

    <ImageView
        android:id="@+id/submit_button"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:src="@drawable/button_submit_1"
        app:layout_constraintTop_toTopOf="@id/add_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toast_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/add_button_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>